--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -4,10 +4,10 @@
   {{ if .Data.Singular }}
   <h3 style="margin-bottom:0">Filtering for "{{ .Title }}"</h3>
   <small>
-    <a href="{{ "posts" | relURL }}">Remove filter</a>
+    <a href="{{ "post" | relURL }}">Remove filter</a>
   </small>
   {{ end }}
-  <ul class="blog-p/osts">
+  <ul class="blog-posts">
     {{ range .Pages }}
     <li>
       <span>
