--- a/layouts/partials/custom_body.html
+++ b/layouts/partials/custom_body.html
@@ -2,8 +2,8 @@
 <script>
   kofiWidgetOverlay.draw('mykyta_myro', {
     'type': 'floating-chat',
-    'floating-chat.donateButton.text': 'Support me',
-    'floating-chat.donateButton.background-color': '#323842',
-    'floating-chat.donateButton.text-color': '#fff'
+    'floating-chat.donateButton.text': 'Support my work',
+    'floating-chat.donateButton.background-color': '#ffffff',
+    'floating-chat.donateButton.text-color': '#323842'
   });
 </script>
