--- a/layouts/partials/custom_body.html
+++ b/layouts/partials/custom_body.html
@@ -2,8 +2,8 @@
 <script>
   kofiWidgetOverlay.draw('mykyta_myro', {
     'type': 'floating-chat',
-    'floating-chat.donateButton.text': 'Support my work',
-    'floating-chat.donateButton.background-color': '#ffffff',
+    'floating-chat.donateButton.text': 'Donate',
+    'floating-chat.donateButton.background-color': '#fcbf47',
     'floating-chat.donateButton.text-color': '#323842'
   });
 </script>
