trouble-shooting kofi widget

--- a/layouts/partials/custom_body.html
+++ b/layouts/partials/custom_body.html
@@ -1,9 +1,1 @@
-<script src='https://storage.ko-fi.com/cdn/scripts/overlay-widget.js'></script>
-<script>
-  kofiWidgetOverlay.draw('mykyta_myro', {
-    'type': 'floating-chat',
-    'floating-chat.donateButton.text': 'Donate',
-    'floating-chat.donateButton.background-color': '#fcbf47',
-    'floating-chat.donateButton.text-color': '#323842'
-  });
-</script>
+<script type='text/javascript' src='https://storage.ko-fi.com/cdn/widget/Widget_2.js'></script><script type='text/javascript'>kofiwidget2.init('Support my work', '#7e9ba6', 'V7V11PQIKP');kofiwidget2.draw();</script> 
