trying out markdown ko-fi button

--- a/layouts/partials/custom_body.html
+++ b/layouts/partials/custom_body.html
@@ -1,1 +1,1 @@
-[![ko-fi](https://ko-fi.com/img/githubbutton_sm.svg)](https://ko-fi.com/V7V11PQIKP)
+<script type='text/javascript' src='https://storage.ko-fi.com/cdn/widget/Widget_2.js'></script><script type='text/javascript'>kofiwidget2.init('Support my work', '#7e9ba6', 'V7V11PQIKP');kofiwidget2.draw();</script> 
